crates/solidity/testing/snapshots/bindings_output/errors/custom_types/generated/0.4.22-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
    ╭─[ input.sol:7:18 ]
    │
  7 │ ╭─▶     error Failure(
    ┆ ┆   
 10 │ ├─▶     );
    │ │            
    │ ╰──────────── Error occurred here.
────╯
Error: Expected Equal or Semicolon.
    ╭─[ input.sol:13:23 ]
    │
 13 │         revert Failure(Severity.ERROR, "Testing");
    │                       ─────────────┬─────────────  
    │                                    ╰─────────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     enum Severity {
    │          ────┬───  
    │              ╰───── name: 2
  3 │         INFO,
    │         ──┬─  
    │           ╰─── name: 3
  4 │         ERROR
    │         ──┬──  
    │           ╰──── name: 4
    │ 
  7 │     error Failure(
    │           ───┬───  
    │              ╰───── name: 5
    │ 
 12 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 6
 13 │         revert Failure(Severity.ERROR, "Testing");
    │                ───┬───  
    │                   ╰───── name: 7
    │
    ├─[ input.sol:1:1 ]
    │
  7 │     error Failure(
    │     ──┬──  
    │       ╰──── unresolved
    │ 
 13 │         revert Failure(Severity.ERROR, "Testing");
    │         ───┬──  
    │            ╰──── refs: built-in, built-in
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Test {
    ┆ ┆   
 15 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │ ╭─▶     enum Severity {
    ┆ ┆   
  5 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 2
    │
    ├─[ input.sol:1:1 ]
    │
  3 │               INFO,
    │               ──┬─  
    │                 ╰─── definiens: 3
  4 │               ERROR
    │               ──┬──  
    │                 ╰──── definiens: 4
    │ 
  6 │   ╭─▶ 
    ┆   ┆   
 10 │ │ ├─▶     );
    │ │ │            
    │ │ ╰──────────── definiens: 5
 11 │ ╭───▶ 
    ┆ ┆     
 14 │ ├───▶     }
    │ │             
    │ ╰───────────── definiens: 6
    │
    ├─[ input.sol:1:1 ]
    │
 13 │         revert Failure(Severity.ERROR, "Testing");
    │ ─────────────────────────┬─────────────────────────  
    │                          ╰─────────────────────────── definiens: 7
────╯
